fixed z-index in SingleCard component

--- a/src/components/common/SingleCard/SingleCard.module.scss
+++ b/src/components/common/SingleCard/SingleCard.module.scss
@@ -16,21 +16,23 @@
       .bgImage{
         position: absolute;
         overflow: hidden;
-        z-index: -1;
+        z-index: -2;
       }
       .imageGradient{
         height: 693.5px;
         width: 100%;
-        z-index: -1 ;
         position: absolute;
+        //z-index: -1 ;
         background-image: linear-gradient(0deg,rgba(0,0,0,.8) 0,transparent 40%,transparent 75%,rgba(0,0,0,.8));
       }
     }
 
   }
   .cardText{
+    position: relative;
     background: transparent;
     height: 600px;
     color: white;
+    z-index: 1 ;
   }
 }
